[package]
name = "uptime-store"
version = "0.1.0"
edition = "2024"

[features]
default = ["file"]
file = []
sql = ["rusqlite"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
fs2 = "0.4"
libloading = "0.8"

# Optional: SQL backend
rusqlite = { version = "0.34", features = ["bundled"], optional = true }
